# ESL

./: README.md
Final project/: 111064503_吳紹齊_Final_project.docx  Final_project_presentation_111064503_吳紹齊.pptx  table.xlsx
Final project/HLS/Guassian_sharpen_filter/: Testbench.cpp  Testbench.h  filter_def.h
Final project/sw/basic-Gussian-Sharpen/: main  table.xlsx
Final project/sw/basic-Gussian-Sharpen-singlecore/: Makefile  main
Final project/vp/src/platform/tiny32-mc-singlecore/: CMakeLists.txt
Hw1/: README.md  report.docx  ~$report.docx
Hw1/Data buffers/test_1/: Median_MeanFilter.cpp  Median_MeanFilter.h  Testbench.h  main.cpp
Hw1/Data buffers/test_1_/: CMakeLists.txt  Median_MeanFilter.cpp  Median_MeanFilter.h
Hw1/Data buffers/test_2/: CMakeLists.txt  Testbench.cpp
Hw1/Median and mean filters with FIFO channels/test_1/: CMakeLists.txt  Median_MeanFilter.cpp
Hw1/Median and mean filters with FIFO channels/test_2/: CMakeLists.txt  Testbench.cpp
Hw2/: HW2_Report_111064503_吳紹齊.docx
Hw2/Median and mean filters with TLM interconnect/test_1/: CMakeLists.txt  Initiator.cpp  Initiator.h  Median_MeanFilter.cpp  MemoryMap.h  SimpleBus.h
Hw2/Median and mean filters with TLM interconnect/test_2/: Initiator.cpp  Initiator.h  Median_MeanFilter.h  MemoryMap.h  Testbench.cpp  Testbench.h  main.cpp
Hw2/Median and mean filters with TLM interface/one/: CMakeLists.txt  Median_MeanFilter.cpp  Median_MeanFilter.h  Testbench.cpp  Testbench.h
Hw3/: HW3_Report_111064503_吳紹齊.docx
Hw4/: HW4_Report_111064503_吳紹齊.docx
Hw4/riscv-vp/sw/basic-Filter-256/: main.cpp
(+3863 files in other folders)
